Finished file structure and started React implementation

--- a/react-portfolio/src/assets/css/style.css
+++ b/react-portfolio/src/assets/css/style.css
@@ -42,7 +42,7 @@ header:hover    {
 }
 
 .image-headshot {
-    background-image: url("./images/Alan\ new-enhanced.jpg");
+    background-image: url("https://cdn.discordapp.com/attachments/1086145365008461885/1133438009589649508/Alan_new-enhanced.jpg");
     height: 940px;
     background-size: cover;
     background-position: center;
@@ -69,7 +69,7 @@ header:hover    {
       }
 
 .image-forehead {
-    background-image: url("./images/Alan\ Forhead.jpg");
+    background-image: url("https://cdn.discordapp.com/attachments/1086145365008461885/1133437335325904936/Alan_Forhead.jpg");
     height: 500px;
     background-size: cover;
     background-position: center;
@@ -82,7 +82,7 @@ header:hover    {
   }
 
   .image-eyes {
-    background-image: url("./images/Alan\ Eyes.jpg");
+    background-image: url("https://cdn.discordapp.com/attachments/1086145365008461885/1133437123912020068/Alan_Eyes.jpg");
     height: 500px;
     background-size: cover;
     background-position: center;
@@ -96,7 +96,7 @@ header:hover    {
   }
 
   .image-mustache {
-    background-image: url("./images/Alan\ Mustache.jpg");
+    background-image: url("https://cdn.discordapp.com/attachments/1086145365008461885/1133437357010468864/Alan_Mustache.jpg");
     height: 500px;
     background-size: cover;
     background-position: center;
